# SGI-Semantic-Grounding-Index

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  tests.yml
experiments/: 01_sgi_semantic_laziness.ipynb  02_cross_model_validation.ipynb  03_displacement_consistency.ipynb  04_truthfulqa_negative_result.ipynb  cross_model_validation.ipynb
new_uploads/: trajectory_context_anchored_halueval.ipynb
new_uploads/SGI experiments/Experiments all-mpnet-base-v2/: geometric_hallucination_detection_1.ipynb  geometric_methods_summary (all-mpnet-base-v2).csv
new_uploads/SGI experiments/Experiments intfloat_e5-large-v2/: geometric_methods_summary (intfloat_e5-large-v2).csv  synthetic_vs_real_comparison (intfloat_e5-large-v2).csv
new_uploads/SGI experiments/Experiments nomic-ai_nomic-embed-text-v1.5/: geometric_methods_summary (nomic-ai_nomic-embed-text-v1.5).csv  synthetic_vs_real_comparison (nomic-ai_nomic-embed-text-v1.5).csv
results/Experiments BAAI_bge-large-en-v1.5/: geometric_methods_summary (BAAI_bge-large-en-v1.5).csv
results/Experiments all-mpnet-base-v2/: synthetic_vs_real_comparison(all-mpnet-base-v2).csv
results/Experiments sentence-transformers_gtr-t5-large/: synthetic_vs_real_comparison (sentence-transformers_gtr-t5-large).csv
sgi/: __init__.py  analysis.py  data.py  metrics.py  visualization.py
tests/: __init__.py  conftest.py  test_analysis.py  test_data.py  test_metrics.py  test_visualization.py
